log/build_2024-12-08_12-59-37/mavros_gnc/stdout_stderr.log
/home/lizychen/.local/lib/python3.10/site-packages/setuptools/_distutils/dist.py:261: UserWarning: Unknown distribution option: 'tests_require'
  warnings.warn(msg)
running egg_info
writing ../../build/mavros_gnc/mavros_gnc.egg-info/PKG-INFO
writing dependency_links to ../../build/mavros_gnc/mavros_gnc.egg-info/dependency_links.txt
writing entry points to ../../build/mavros_gnc/mavros_gnc.egg-info/entry_points.txt
writing requirements to ../../build/mavros_gnc/mavros_gnc.egg-info/requires.txt
writing top-level names to ../../build/mavros_gnc/mavros_gnc.egg-info/top_level.txt
reading manifest file '../../build/mavros_gnc/mavros_gnc.egg-info/SOURCES.txt'
writing manifest file '../../build/mavros_gnc/mavros_gnc.egg-info/SOURCES.txt'
running build
running build_py
copying mavros_gnc/PrintColours.py -> /home/lizychen/mavros_gnc/build/mavros_gnc/build/lib/mavros_gnc
copying mavros_gnc/__init__.py -> /home/lizychen/mavros_gnc/build/mavros_gnc/build/lib/mavros_gnc
copying mavros_gnc/gnc_api.py -> /home/lizychen/mavros_gnc/build/mavros_gnc/build/lib/mavros_gnc
running install
running install_lib
copying /home/lizychen/mavros_gnc/build/mavros_gnc/build/lib/mavros_gnc/gnc_api.py -> /home/lizychen/mavros_gnc/install/mavros_gnc/lib/python3.10/site-packages/mavros_gnc
byte-compiling /home/lizychen/mavros_gnc/install/mavros_gnc/lib/python3.10/site-packages/mavros_gnc/gnc_api.py to gnc_api.cpython-310.pyc
  File "/home/lizychen/mavros_gnc/install/mavros_gnc/lib/python3.10/site-packages/mavros_gnc/gnc_api.py", line 470
    return sqrt((target_x - current_x)  2 + (target_y - current_y)  2 + (target_z - current_z) ** 2)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

running install_data
copying resource/mavros_gnc -> /home/lizychen/mavros_gnc/install/mavros_gnc/share/ament_index/resource_index/packages
copying package.xml -> /home/lizychen/mavros_gnc/install/mavros_gnc/share/mavros_gnc
running install_egg_info
removing '/home/lizychen/mavros_gnc/install/mavros_gnc/lib/python3.10/site-packages/mavros_gnc-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/mavros_gnc/mavros_gnc.egg-info to /home/lizychen/mavros_gnc/install/mavros_gnc/lib/python3.10/site-packages/mavros_gnc-0.0.0-py3.10.egg-info
running install_scripts
Installing gnc_api script to /home/lizychen/mavros_gnc/install/mavros_gnc/lib/mavros_gnc
writing list of installed files to '/home/lizychen/mavros_gnc/build/mavros_gnc/install.log'
